tests/ui/transmutability/references/reject_lifetime_extension.stderr
error: lifetime may not live long enough
  --> $DIR/reject_lifetime_extension.rs:20:18
   |
LL |     fn extend_bare<'a>(src: &'a u8) -> &'static u8 {
   |                    -- lifetime `'a` defined here
LL |         unsafe { transmute(src) }
   |                  ^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

